- Temporarily patch save-error to restore functionality
- Update German lexicon
- Shorten chunk description so installation works
- Fix translated label_dow keys
- Fix some JS errors
- Add month labels to lexica
- Add french and italian lexica
- Fix tiny/editor settings
- Set widths on grids
- Fix Google-Maps/-Geolocation
- Generate URLs fully, for multi-context support

==================================== 
mxCalendar 1.1.11-pl
==================================== 
Bug fixes for the following:
#161 - Support versions of Modx 2.3 upto 2.6
#169 - Duplicate of #161
#171 - Repeating event display issue on Modx version >= 2.3  
#174 - Support of version Modx.2.4 

==================================== 
mxCalendar 1.1.10-pl
==================================== 
Bug fixes for the following: 
80  - add videos to events (tables, and manager UI changes) - **Need to do more testing
81  - RTE for description
104 - active not set on event in Edit window only grid
105 - add new content RTE property to events
107 - [part of fix for 110]
108 - repeating events issue
110 - allow all day event to still select "End Date" for single event spanning multiple days
111 - elStartDate in past issue
116 - repeating events issue
117 - adding images z-index and refreshing grid issue (solution provided)
119 - strftime %p issues for 24 hour date/time
124 - prior fix and confirmed for release 1.1.10-pl
127 - multiple day event only showing on the first day
122 - startdate_fstamp and enddate_fstamp problem returning currnet (now) stamp
102, 115 - removing images from event

Enhancement:
* - added support for TinyMCE editor in event fields
* - new field for description

==================================== 
mxCalendar 1.1.9-pl
==================================== 
- Bug fix: hard coded test template was removed, sorry! 
- Enhancement: Add capability to filter by a specific event id in list view views

==================================== 
mxCalendar 1.1.8-pl
==================================== 