@@ -44,32 +44,32 @@ $_lang['mxcalendars.label_link_rel'] = 'Rel Rel';
 $_lang['mxcalendars.label_link_target'] = 'Destination du lien';
 $_lang['mxcalendars.label_cancel'] = 'Annuler';
 $_lang['mxcalendars.label_save'] = 'Enregistrer';
-$_lang['mxcalendars.label_sunday'] = 'dimanche';
+$_lang['mxcalendars.label_sunday'] = 'Dimanche';
 $_lang['mxcalendars.label_monday'] = 'Lundi';
-$_lang['mxcalendars.label_tuesday'] = 'mardi';
-$_lang['mxcalendars.label_wednesday'] = 'mercredi';
-$_lang['mxcalendars.label_thursday'] = 'jeudi';
-$_lang['mxcalendars.label_friday'] = 'vendredi';
-$_lang['mxcalendars.label_saturday'] = 'samedi';
+$_lang['mxcalendars.label_tuesday'] = 'Mardi';
+$_lang['mxcalendars.label_wednesday'] = 'Mercredi';
+$_lang['mxcalendars.label_thursday'] = 'Jeudi';
+$_lang['mxcalendars.label_friday'] = 'Vendredi';
+$_lang['mxcalendars.label_saturday'] = 'Samedi';
 $_lang['mxcalendars.label_dow_0'] = 'Dimanche';
 $_lang['mxcalendars.label_dow_1'] = 'Lundi';
 $_lang['mxcalendars.label_dow_2'] = 'Mardi';
 $_lang['mxcalendars.label_dow_3'] = 'Mercredi';
-$_lang['mxcalendars.label_dow_4'] = 'jeudi';
-$_lang['mxcalendars.label_dow_5'] = 'vendredi';
-$_lang['mxcalendars.label_dow_6'] = 'samedi';
+$_lang['mxcalendars.label_dow_4'] = 'Jeudi';
+$_lang['mxcalendars.label_dow_5'] = 'Vendredi';
+$_lang['mxcalendars.label_dow_6'] = 'Samedi';
 $_lang['mxcalendars.label_dow_7'] = 'Dimanche';
 $_lang['mxcalendars.label_month_01'] = 'Janvier';
 $_lang['mxcalendars.label_month_02'] = 'Février';
 $_lang['mxcalendars.label_month_03'] = 'Mars';
-$_lang['mxcalendars.label_month_04'] = 'avril';
+$_lang['mxcalendars.label_month_04'] = 'Avril';
 $_lang['mxcalendars.label_month_05'] = 'Mai';
 $_lang['mxcalendars.label_month_06'] = 'Juin';
 $_lang['mxcalendars.label_month_07'] = 'Juillet';
 $_lang['mxcalendars.label_month_08'] = 'Août';
 $_lang['mxcalendars.label_month_09'] = 'Septembre';
-$_lang['mxcalendars.label_month_10'] = 'octobre';
-$_lang['mxcalendars.label_month_11'] = 'novembre';
+$_lang['mxcalendars.label_month_10'] = 'Octobre';
+$_lang['mxcalendars.label_month_11'] = 'Novembre';
 $_lang['mxcalendars.label_month_12'] = 'Décembre';
 $_lang['mxcalendars.label_allday'] = 'Toute la journée';
 $_lang['mxcalendars.label_daily'] = 'Tous les jours';
@@ -128,6 +128,7 @@ $_lang['mxcalendars.repeating_last_occ_col_label'] = 'Dernière répétition';
 
 $_lang['mxcalendars.label_startdate'] = 'Date / heure de début';
 $_lang['mxcalendars.label_starttime'] = 'heure de début';
+$_lang['mxcalendars.starttime_strftime_format'] = '%R';
 $_lang['mxcalendars.label_title'] = 'Nom / Titre';
 $_lang['mxcalendars.label_enddate'] = 'Date / heure de fin';
 $_lang['mxcalendars.label_duplicate'] = 'Dupliquer';
