@@ -43,21 +43,21 @@ $_lang['mxcalendars.label_link_rel'] = 'Link Rel';
 $_lang['mxcalendars.label_link_target'] = 'Destinazione link';
 $_lang['mxcalendars.label_cancel'] = 'Annulla';
 $_lang['mxcalendars.label_save'] = 'Salva';
-$_lang['mxcalendars.label_sunday'] = 'Sunday';
+$_lang['mxcalendars.label_sunday'] = 'Domenica';
 $_lang['mxcalendars.label_monday'] = 'Lunedi';
 $_lang['mxcalendars.label_tuesday'] = 'Martedì';
 $_lang['mxcalendars.label_wednesday'] = 'Mercoledi';
 $_lang['mxcalendars.label_thovedì'] = 'Giovedì';
 $_lang['mxcalendars.label_friday'] = 'Venerdì';
-$_lang['mxcalendars.label_saturday'] = 'Saturday';
+$_lang['mxcalendars.label_saturday'] = 'Sabato';
 $_lang['mxcalendars.label_dow_0'] = 'Domenica';
 $_lang['mxcalendars.label_dow_1'] = 'Lunedi';
 $_lang['mxcalendars.label_dow_2'] = 'Martedì';
 $_lang['mxcalendars.label_dow_3'] = 'Mercoledi';
 $_lang['mxcalendars.label_dow_4'] = 'Giovedì';
 $_lang['mxcalendars.label_dow_5'] = 'Venerdì';
-$_lang['mxcalendars.label_dow_6'] = 'Saturday';
-$_lang['mxcalendars.label_dow_7'] = 'Sunday';
+$_lang['mxcalendars.label_dow_6'] = 'Sabato';
+$_lang['mxcalendars.label_dow_7'] = 'Domenica';
 $_lang['mxcalendars.label_month_01'] = 'Gennaio';
 $_lang['mxcalendars.label_month_02'] = 'Febbraio';
 $_lang['mxcalendars.label_month_03'] = 'Marzo';
@@ -126,6 +126,7 @@ $_lang['mxcalendars.repeating_last_occ_col_label'] = 'Ultima ripetizione';
 
 $_lang['mxcalendars.label_startdate'] = 'Inizia data / ora';
 $_lang['mxcalendars.label_starttime'] = 'ora di inizio';
+$_lang['mxcalendars.starttime_strftime_format'] = '%R';
 $_lang['mxcalendars.label_title'] = 'Nome / Titolo';
 $_lang['mxcalendars.label_enddate'] = 'Data / ora di fine';
 $_lang['mxcalendars.label_duplicate'] = 'Duplica';
